2009-10-14  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* flumotion/test/test_component_providers.py:
	Changes the import to use flumotion.common.python rather than md5 directly

2009-10-14  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/test/test_component_providers.py:
	Adds a few tests for the cachedProvider

2009-10-13  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Zaheer

	* flumotion/component/producers/firewire/firewire.py:
	Use a drop factor of 1 for framerates greater than 12.5
	Fixes #1369


2009-10-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/connections.py:
	Always use ConnectionInfo objects to update the PBConnectionInfo with
	the username and the password.
	* flumotion/test/test_admin_connections.py:
	Adapt the tests to the fact that RecentConnections store a
	PBConnectionInfo, not a ConnectionInfo.

2009-10-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/connections.py:
	Store PBConnectionInfo in RecentConnection instances, not
	ConnectionInfo. A RecentConnection will never contain shell globs, so
	it's safe to parse the ConnectionInfo object into a PBConnectionInfo
	immediately in the constructor.
	Avoids breaking other parts of code due to the change of the
	RecentConnection 'info' instance variable type introduced in r8228.
	Closes #1373.

2009-10-07  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/component/base/scheduler.py:
	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/test/test_icalbouncer.py:
	Revokes keycards in case the new calendar hasn't a current event.
	Closes #1157

2009-10-06  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Jan Urbanski, Sebastien Merle

	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/test/test_icalbouncer.py:
	Handles overlapping events in the ical-bouncer and adds the proper tests.
	Closes #1374
